# frozen-lake-dql

./: .gitignore  README.md  pyproject.toml
experiments/dqn_experiment_20241119_222652/models/: dqn_model.pt  final_model.pt
experiments/dqn_experiment_20241119_222918/: eval_results.json
experiments/dqn_experiment_20241119_222918/models/: dqn_model.pt  final_model.pt
experiments/dqn_experiment_20241119_235451/: config.json  eval_results.json
experiments/dqn_experiment_20241119_235451/models/: dqn_model.pt  final_model.pt
frozen_lake_dql/: main.py
frozen_lake_dql/agents/: dqn_agent.py
frozen_lake_dql/models/: dqn_model.py
frozen_lake_dql/training/: trainer.py
frozen_lake_dql/utils/: config.py  memory.py  visualization.py
